--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ require('constant.php');
                 <h1 class="size-50">Know <br /> About me</h1>
                 <div class="h-50"></div>
                 <p class="noselect">I'm part of the professional graphic designer's world 10 years already.<br> The combination of my practical work and solid educational experience has prepared me for showing an immediate contribution to your needs.</p>
-                <p class="noselect">My goals as a web and graphic designer have always been to create more usable and elegant produts on the web. My experience and knowlege provide me with the capabilyty to handle and deliver tasks in a beautiful yet effecient way.</p>
+                <p class="noselect">My goals as a web and graphic designer have always been to create more usable and elegant products on the web. My experience and knowledge provide me with the capability to handle and deliver tasks in a beautiful yet efficient way.</p>
                 <p class="noselect">I love to create clean, smart and effective objects and have enthusiasm to find the best communication design solutions.</p>
                 <p class="noselect">European work permit</p>
                 <div class="h-50"></div> <img src="img/Signature.svg" width="230" alt="" />
