--- a/index.html
+++ b/index.html
@@ -782,6 +782,9 @@ require('constant.php');
   <script>document.addEventListener("contextmenu", function(e){
         e.preventDefault();
     }, false);</script>
+    <script>$('#home').click(function() {
+   $.scrollTo($('#about'), 1000);
+});</script>
     
 </body>
 
