--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ require('constant.php');
     <!-- ./header -->
     
     <!-- home -->
-    <div class="section" id="home" data-stellar-background-ratio="0.5">
+    <div class="section" href="#about" id="home" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
