--- a/index.html
+++ b/index.html
@@ -773,12 +773,12 @@
 
     <!--  main script  -->
     <script src="js/custom.js"></script>
-  <script>document.addEventListener("contextmenu", function(e){
+  <!-- <script>document.addEventListener("contextmenu", function(e){
         e.preventDefault();
     }, false);</script>
     <script>$('#home').click(function() {
    $.scrollTo($('#about'), 1000);
-});</script>
+});</script> -->
     
 </body>
 
