--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <!-- ./header -->
     
     <!-- home -->
-    <div class="section" id="home" data-stellar-background-ratio="0.5">
+    <!-- <div class="section" id="home" data-stellar-background-ratio="0.5">
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
@@ -68,7 +68,7 @@
                     <h1 style="opacity: 0">Graphic and Web Designer</h1></div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- ./home -->
     
     <!-- about -->
