--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#skills">skills</a></li>
-                <li><a href="#experience">experience</a></li>
+                <!-- <li><a href="#experience">experience</a></li> -->
                 <li><a href="#projects">projects</a></li>
                 <li><a href="#contact">contact</a></li>
             </ul>
@@ -163,7 +163,7 @@
     
 
     <!-- experience  -->
-    <div class="section" id="experience">
+    <div class="section" id="skills">
         <div class="container">
             <div class="col-md-12">
                 <!-- <h4>03</h4> -->
