--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h4 style="opacity: 100">Dejan Tomikj</h4>
-                    <h1 style="opacity: 100">Graphic and Web Designer</h1></div>
+                    <h1 style="opacity: 100;background-color: #465AB1;color: white;padding: 4px;">DEJAN TOMIKJ</h1></div>
+                    <h4 style="opacity: 100">GRAPHIC DESIGNER</h4>
             </div>
         </div>
     </div>
