--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h1 style="opacity: 100;background-color: #465AB1;color: white;padding: 4px;">DEJAN TOMIKJ</h1></div>
-                    <h4 style="opacity: 100">GRAPHIC DESIGNER</h4>
+                    <h1 style="opacity: 100;background-color: #465AB1;color: white;padding: 10px;">DEJAN TOMIKJ</h1></div>
+                    <h4 style="opacity: 100;color: gray;">GRAPHIC DESIGNER</h4>
             </div>
         </div>
     </div>
@@ -829,12 +829,12 @@
 
     <!--  main script  -->
     <script src="js/custom.js"></script>
-  <script>document.addEventListener("contextmenu", function(e){
+  <!-- <script>document.addEventListener("contextmenu", function(e){
         e.preventDefault();
     }, false);</script>
     <script>$('#home').click(function() {
    $.scrollTo($('#about'), 1000);
-});</script>
+});</script> -->
     
 </body>
 
