--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
         <div class="container">
             <div class="disply-table">
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-                    <h1 style="opacity: 100;background-color: #465AB1;color: white;padding: 10px;">DEJAN TOMIKJ</h1></div>
                     <h4 style="opacity: 100;color: gray;">GRAPHIC DESIGNER</h4>
+                    <h1 style="opacity: 100;background-color: #465AB1;color: white;padding: 10px;">DEJAN TOMIKJ</h1>
+                </div>
+                    
             </div>
         </div>
     </div>
