--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#skills">skills</a></li>
+                <!-- <li><a href="#skills">skills</a></li> -->
                 <!-- <li><a href="#experience">experience</a></li> -->
                 <li><a href="#projects">projects</a></li>
                 <li><a href="#contact">contact</a></li>
@@ -781,7 +781,7 @@
     <div class="section" id="contact">
         <div class="container">
             <div class="col-md-12">
-                <h4>05</h4>
+                <!-- <h4>05</h4> -->
                 <h1 class="size-50">Contact  Me</h1>
                 <div class="h-50"></div>
             </div>
