--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <header class="navbar-fixed-top">
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
+                <li><a href="#home">home</a></li>
                 <!-- <li><a href="#skills">skills</a></li> -->
                 <!-- <li><a href="#experience">experience</a></li> -->
                 <li><a href="#projects">projects</a></li>
