--- a/index.html
+++ b/index.html
@@ -789,7 +789,7 @@
             <div class="col-md-4" data-aos="fade-up">
 
                 <h3> Mobile Number</h3>
-                <p><a href="tel:+38977694466">+389 77 69 44 66</a></p>
+                <p><a href="tel:+436605010475">+43 660 5010 475</a></p>
                 <h3>Email</h3>
                 <p><a href="mailto:dejantomikj@gmail.com?Subject=Hello%20Dejan" target="_top">dejantomikj@gmail.com</a></p>
 
